Added main poster

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
   <div>
     <h1>Chemistry Between Us</h1>
-    <h2>A riveting story full of high octane drama and tension</h2>
+    <img src="img/chem.JPG" alt="chemistry between us">
+    <h2>"A riveting story full of high octane drama and tension" - metacritic</h2>
   </div>
 </div>
 
